# fastapi-nextauth-jwt

./: .gitignore  LICENSE  README.md  fastapi_nextauth_jwt.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/simple/: README.md  docker-compose.yml
examples/simple/fastapi/: Dockerfile  main.py  requirements.txt
examples/simple/nextjs/: Dockerfile  next.config.js  package-lock.json  package.json
examples/simple/nextjs/src/: auth.ts  middleware.ts
examples/simple/nextjs/src/app/: page.tsx
examples/simple/nextjs/src/app/api/auth/[...nextauth]/: route.ts
examples/simple/nextjs/src/pages/: _app.tsx  _document.tsx  index.tsx
examples/simple/nextjs/src/pages/api/: hello.ts
examples/simple/nextjs/src/pages/api/auth/: [...nextauth].js
examples/simple/nextjs/src/styles/: globals.css
src/: cookies.py  csrf.py  fastapi_nextauth_jwt.py  operations.py
src/fastapi_nextauth_jwt/: __init__.py  cookies.py  csrf.py  exceptions.py  fastapi_nextauth_jwt.py  logger.py  operations.py
tests/: test_cookies.py  test_csrf.py  test_operations.py
tests/fastapi/: main.py  test_main.py  test_v4.py  test_v5.py  v4.py  v5.py
tests/unit/: test_cookies.py  test_secret.py
