[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fastapi_nextauth_jwt"
authors = [{name = "Tom Catshoek"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "fastapi",
    "cryptography",
    "python-jose[cryptography]"
]

[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
    "httpx"
]

[project.urls]
Home = "https://github.com/TCatshoek/fastapi-nextauth-jwt"